# local-whisper

./: .gitignore  CHANGELOG.md  CODE_REVIEW.md  CONTRIBUTING.md  GITHUB_CHECKLIST.md  LICENSE  QUICK_START.md  README.md  benchmark.py  config.examples.json  config.hq.json  config.json  pyproject.toml  transcribe.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
