[project]
name = "local-whisper"
version = "0.1.0-beta"
description = "Fast, private, local Speech-to-Text using faster-whisper with GPU acceleration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "faster-whisper>=1.2.1",
    "imageio-ffmpeg>=0.6.0",
    "torch>=2.5.0",
]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
